# ESP32_Audio

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  build_firmware.bat  partitions.csv  sdkconfig
homeassistant/: automations.yaml  configuration.yaml  input_select.yaml  mqtt.yaml  scripts.yaml
homeassistant/lovelace/: esp32_audio_card.yaml
homeassistant/mqtt/: binary_sensors.yaml  buttons.yaml  numbers.yaml  selects.yaml  sensors.yaml  switches.yaml
main/: CMakeLists.txt  alarm_manager.c  alarm_manager.h  app_mqtt.h  audio_player.c  audio_player.h  audio_settings.c  audio_settings.h  aux_input.c  aux_input.h  battery_monitor.c  battery_monitor.h  bluetooth_sink.c  bluetooth_sink.h  bluetooth_source.c  bluetooth_source.h  bluetooth_source_fixed.c  config.h  input_controls.c  input_controls.h  main.c  mqtt_client.c  ota_update.c  ota_update.h  piped_client.c  piped_client.h  radio_browser.c  radio_browser.h  radio_stations.c  radio_stations.h  sdcard_player.c  sdcard_player.h  spotify_api.c  spotify_api.h  system_diag.c  system_diag.h  tone_generator.c  tone_generator.h  web_server.c  web_server.h  (+2 more)
web/: app.js  index.html  style.css
